# Bitbucket-Jira-sync-configuration

./: .clang-format  .clang-tidy  CMakeLists.txt  InputData.txt
src/: AddOptions.ui  Connection.ui  DetailsContainer.ui  Fields.ui  Main.cpp  MainWindow.ui  Options.ui  SaveOption.ui
src/Data/: ConnectionController.h  DerivedItems.h  FieldsController.h  GenerateItems.cpp  MainController.cpp  MainController.h  Parser.cpp  Parser.h  Tables.cpp  Tables.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h
src/Data/controller/: ConnectionController.cpp  FieldsController.cpp
src/Data/items/: AdditionalOptionItem.cpp  ConnectionItem.cpp  FieldItem.cpp  OptionItem.cpp  RootItem.cpp
src/Widgets/: AddOptionsWidget.cpp  AddOptionsWidget.h  ConnectionWidget.cpp  ConnectionWidget.h  DetailsContainer.cpp  DetailsContainer.h  FieldsWidget.cpp  FieldsWidget.h  MainWindow.cpp  MainWindow.h  OptionsWidget.cpp  OptionsWidget.h
